Change colors of ui, fix wrong size of 'refresh' button This resolves #19

--- a/webui_src/scss/style.scss
+++ b/webui_src/scss/style.scss
@@ -14,13 +14,20 @@ body {
   margin: 0px auto;
   width: 100%;
   padding: 5px;
-  background-color: rgb(22, 97, 122);
-  color: rgb(222, 222, 222);
+  background-color: #1db954;
 
   a {
-    color: rgb(222, 222, 222);
+    color: inherit;
     text-decoration: underline;
   }
+}
+
+.header {
+  font-size: 2rem;
+}
+
+.footer {
+  color: rgb(30, 30, 30);
 }
 
 .active-device-list {
